--- a/templates/allow_ips.erb
+++ b/templates/allow_ips.erb
@@ -1,3 +1,3 @@
 <% allowed_ips.each do |ip| -%>
--A INPUT -j ACCEPT --source <=% ip %> --proto any --dport <%= allowed_post %>
+-A INPUT -j ACCEPT --source <=% ip %> --proto any --dport <%= allowed_port %>
 <% end -%>
